force-app/main/default/objects/Asset/fields/Allow_Auto_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Auto_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Auto Assignment</label>
    <type>Checkbox</type>
</CustomField>