force-app/main/default/objects/Asset/fields/prosci_unique_id__c.field-meta.xml
<CustomField>
    <fullName>prosci_unique_id__c</fullName>
    <externalId>true</externalId>
    <label>Prosci Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>