force-app/main/default/objects/Asset/fields/Seats_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Seats_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>