force-app/main/default/objects/Asset/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>