force-app/main/default/objects/Asset/fields/Seats_Comped__c.field-meta.xml
<CustomField>
    <fullName>Seats_Comped__c</fullName>
    <label>Seats Comped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>