force-app/main/default/objects/Asset/fields/Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Seats_Purchased__c</fullName>
    <label>Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>